Massively speed up compiler by returning unmodifiable views of collections instead of copies in Graph.java